--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Trivia Game</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="../TriviaGame/assets/css/style.css" />
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" type="text/javascript"></script>
     <script src="../TriviaGame/assets/javascript/app.js"></script>
+
 </head>
 
 <body>
@@ -30,7 +33,14 @@
     <script>
         let timeLeft = 30;
         let clockElement = $('#clock').html();
-        let timerId = setInterval(coundown, 1000);
+        let timerId = setInterval(counDown, 1000);
+
+
+
+        $('document').ready(function(){
+
+            countDown();
+        })
 
         function countDown() {
             if (timeLeft === 0) {
@@ -42,7 +52,28 @@
                 timeLeft--;
             }
 
+
+
         }
+
+        
+    
+function myTimer() {
+    //var d = new Date();
+    if(d === 0)
+    {
+        alert('time is up')
+    }
+    else {
+      document.getElementById("demo").innerHTML = d;
+      d--
+     }
+}
+
+</script>
+
+</body>
+</html>
     </script>
 </body>
 
